tox: remove deprecated process-dependency-links

--- a/tox.ini
+++ b/tox.ini
@@ -16,4 +16,4 @@ commands =
     coverage run -m unittest discover
 deps =
     coverage
-install_command = pip install --process-dependency-links {opts} {packages}
+install_command = pip install {opts} {packages}
